[tool.poetry]
name = "mp3tagger"
version = "0.1.0"
description = "Auto tag MP3 files by inferring tags from directory structure."
authors = ["Darko Trifunovski <dtrifuno@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
mp3tagger = "mp3tagger.main:main"

[tool.poetry.dependencies]
python = "^3.8"
mutagen = "^1.45.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
